--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.wbw_first" >
+    package="com.example.wbw_first">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -10,19 +10,22 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar" >
+        android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">
         <activity
-            android:name=".BottomSheet.dialogBottomRegisterActivity"
+            android:name=".Dialogs.DialogListActivity"
             android:exported="false" />
         <activity
-            android:name=".Dialogs.DialogEditUser"
+            android:name=".Dialogs.DialogRegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BottomSheet.dialogBottomRegisterActivity"
             android:exported="false" />
         <activity
             android:name=".ActivityMore"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,7 +34,7 @@
         </activity>
         <activity
             android:name=".TabsLayout"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
