--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,6 @@
             android:name=".Dialogs.DialogRegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".BottomSheet.dialogBottomRegisterActivity"
-            android:exported="false" />
-        <activity
             android:name=".ActivityMore"
             android:exported="false" />
         <activity
@@ -34,12 +31,7 @@
         </activity>
         <activity
             android:name=".TabsLayout"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:exported="false">
         </activity>
     </application>
 
